--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -64,8 +64,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">About</h5>
+          <p class="grey-text text-lighten-4">PlantTrackr was created to be an indoor plant care assistant that helps you develop a green thumb by giving you the tools you need to take a methodical approach to caring for them.</p>
 
 
         </div>
@@ -91,7 +91,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made with <i class="fa fa-heart fa-2g" aria-hidden="true"></i> by <a href="www.productoptimist.com" style="color:white;"><u>Product Optimist</u></a> (aka Katrina Brinson)</a>
       </div>
     </div>
   </footer>
