--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -22,7 +22,7 @@
      <a href="/" class="brand-logo">PlantTrackr</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/plants">Browse</a></li>
-       <li><a href="/greenhouse" class="active">My Plants</a></li>
+       <li class="active"><a href="/greenhouse" class="active">My Plants</a></li>
        <li><a href="/plants/new">Create Plant</a></li>
        <li><a href="/logout" class="waves-effect waves-light btn light-green darken-4">Logout</a></li>
      </ul>
