fixed duplicate plant issue in create plant controller

--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -32,7 +32,7 @@
             </div>
             <div class="row">
               <div class="input-field col m12 s12">
-                <input id="picture" type="text" name="plant[picture]" required>
+                <input id="picture" type="url" name="plant[picture]" required>
                 <label for="picture">Photo Url</label>
               </div>
             </div>
