Added some tooltips

--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -60,25 +60,26 @@
                   <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Very small particles, good water retention, heavy. Sticky to the touch when wet, but smooth when dry." for="soil-clay">Clay</label>
                 </p>
                 <p>
+                  <input name="plant[soil]" type="radio" id="soil-sandy" value="Sandy" required/>
+                  <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Large gritty particles with rapid drainage. Little to no nutrient retention." for="soil-sandy">Sandy</label>
+                </p>
+                <p>
                   <input name="plant[soil]" type="radio" id="soil-silt" value="Silt" required/>
-                  <label for="soil-silt">Silt</label>
+                  <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Like river sediment. Between a clay and a sand with a dust like texture when dry. Leaves dirt on the skin to the touch when wet." for="soil-silt">Silt</label>
                 </p>
                 <p>
                   <input name="plant[soil]" type="radio" id="soil-peaty" value="Peaty" required/>
-                  <label for="soil-peaty">Peaty</label>
+                  <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Dark, spongy, and easily compressed with plenty of organic matter that retains lots of moisture." for="soil-peaty">Peaty</label>
                 </p>
                 <p>
                   <input name="plant[soil]" type="radio" id="soil-loam" value="Loam" required/>
-                  <label for="soil-loam">Loam</label>
+                  <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Ideal for most plants. Mix of sand, silt, and touch of clay. Provides balance of water retention." for="soil-loam">Loam</label>
                 </p>
                 <p>
                   <input name="plant[soil]" type="radio" id="soil-chalky" value="Chalky" required/>
-                  <label for="soil-chalky">Chalky</label>
+                  <label class="tooltipped" data-position="right" data-delay="50" data-tooltip="Lime-rich soild that are highly alkaline." for="soil-chalky">Chalky</label>
                 </p>
-                <p>
-                  <input name="plant[soil]" type="radio" id="soil-sandy" value="Sandy" required/>
-                  <label for="soil-sandy">Sandy</label>
-                </p>
+
                 <p>
                   <input name="plant[soil]" type="radio" id="soil-rocky" value="Rocky" required/>
                   <label for="soil-rocky">Rocky</label>
