added mobile menus

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <nav>
    <div class="nav-wrapper green darken-1">
-     <a href="#!" class="brand-logo">PlantTrack</a>
+     <a href="#!" class="brand-logo">PlantTrackr</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/signup" class="waves-effect waves-light btn  deep-orange lighten-1">Signup</a></li>
        <li><a href="/login" class="waves-effect waves-light btn cyan darken-1">Login</a></li>
@@ -29,7 +29,7 @@
          <li>
            <img src="https://images.pexels.com/photos/793012/pexels-photo-793012.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"> <!-- random image -->
            <div class="caption center-align">
-             <h3>Welcome to PlantTrack</h3>
+             <h3>Welcome to PlantTrackr</h3>
              <h5 class="light grey-text text-lighten-3">Signup Today</h5>
            </div>
          </li>
@@ -57,7 +57,7 @@
            <h2 class="center light-green-text"><i class="fa fa-medkit fa-2g" aria-hidden="true"></i></h2>
            <h5 class="center">Update Plant Statuses</h5>
 
-           <p class="light">Anytime you water your plant or notice changes like dead leaves update its status to save a record to help you decide on making changes to its care instruction.</p>
+           <p class="light">Anytime you water your plant or notice changes like dead leaves update its status to save a record to help you decide on making changes to its care instructions.</p>
          </div>
        </div>
 
@@ -78,7 +78,7 @@
  <div class="parallax-container" style="height:500px">
   <div class="parallax" style="background-color:#000000;"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb" style="opacity: 0.9; filter:blur(1px);"></div>
     <container>
-      <section style="margin-top:80px;">
+      <section>
         <div class="row">
          <div class="col s8 offset-s2">
            <br>
