--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -17,19 +17,19 @@
     <form action="/login" class="col s12" method="POST">
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="username" type="text" class="validate" name="username">
+          <input id="username" type="text" class="validate" name="username" required>
           <label for="username">Username</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="email" type="text" class="validate" name="email">
+          <input id="email" type="text" class="validate" name="email" required>
           <label for="email" data-error="wrong" data-success="right">Email</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="password" type="password" class="validate" name="password">
+          <input id="password" type="password" class="validate" name="password" required>
           <label for="password">Password</label>
         </div>
       </div>
