--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -57,7 +57,7 @@
                       </a>
                       <ul>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Journal"><a href="/plants/<%=plant.id%>"><i class="material-icons">event_note</i></a></li>
-                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal"><i class="material-icons">playlist_add</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal-<%=plant.id%>"><i class="material-icons">playlist_add</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="/plants/<%=plant.id%>/edit"><i class="material-icons">edit</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons">content_copy</i></a></li>
                           <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant-<%=plant.id%>').submit();"><i class="material-icons">delete_forever</i></a></li>
@@ -119,7 +119,7 @@
             </form>
           </div>
 
-          <div id="statusmodal" class="modal modal-fixed-footer">
+          <div id="statusmodal-<%=plant.id%>" class="modal modal-fixed-footer">
            <form id="newplant" action="/<%=plant.id%>/statuses" method="POST">
            <div class="modal-content">
                     <h5 class="center-align"><i class="fa fa-pagelines fa-2x" aria-hidden="true" style="color:#00acc1;"></i></h5>
